src/test/deca/syntax/invalid/custom/no_semi_instruction.deca
// Description:
//    instruction without semi at the end;
//
// Resultats:
//    ligne 13: no viable alternative at input '}'
//
// Historique:
//    cree le 11/01/2022

{
bonjour
}